# cloudflare-ddns

./: meson_options.txt
exe/: config.ini  main.cpp  utils.hpp
tests/: credentials.hpp.in  meson.build  test_parsing.cpp  update_multiple_records.cpp
